tests/valid/noExportAssignmentLet.ts
// @ts-nocheck
export const value = 5;
