tests/invalid/noPrototype.ts
// @ts-nocheck
const proto = MyClass.prototype;
